2008-08-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwunconv.c:  Report failure to unlock the passwd or shadow
	file to stderr and syslog.

2008-08-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Report failure to unlock files to stderr and
	syslog.

2008-08-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Report failure to unlock files to stderr and
	syslog.
	* src/newusers.c: In case of error when files are open or closed,
	indicate the failing file.
	* src/newusers.c: Do not try to unlock the files manually since
	this is done in fail_exit.

2008-08-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: Report failure to unlock the passwd or shadow file
	to stderr and syslog.

2008-08-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwconv.c: Report failure to unlock the passwd or shadow file
	to stderr and syslog.
	* src/pwconv.c: Report failure to chmod the backup file.

2008-08-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpunconv.c: Report failure to unlock the group or gshadow
	files to stderr and syslog.

2008-08-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chfn.c: Added fail_exit(). Check if the passwd file is
	locked. Report failures to unlock to stderr and syslog.
	* src/chfn.c: Is case of failure, use fail_exit() rather than
	exit().
	* src/chfn.c: Ignore the return value of pam_end().

2008-08-06  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c, lib/groupio.h, lib/pwio.c, lib/pwio.h,
	lib/sgroupio.c, lib/sgroupio.h, lib/shadowio.c, lib/shadowio.h:
	Added *_dbname() functions to retrieve the name of the databases.
	* lib/groupio.c, lib/groupio.h, lib/pwio.c, lib/pwio.h,
	lib/sgroupio.c, lib/sgroupio.h, lib/shadowio.c, lib/shadowio.h:
	*_name() functions renamed *setname().
	* src/grpck.c, src/pwck.c: Likewise.
	* lib/groupio.h, lib/pwio.h, lib/sgroupio.h, lib/shadowio.h: Added